# kaizen

./: .cursorrules  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT_REPORT.md  BENCHMARK.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  HANDOFF.md  KAIZEN.md  README.md  SECURITY.md  SKILLS.md  TECHNICAL_GUIDE.md  UNIVERSAL_PROMPT.txt  demo.py  install.py  marketplace.json  mypy.ini  package.json  pyproject.toml  requirements.txt  robots.txt
.agents/: SKILL.md  backlog.json  registry.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  skill-submission.yml  skill_proposal.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  skill-marketplace.md
docs/archive/: ACTIVATED.md  (+6 more)
hooks/: context_compact.md  post_tool_verify.md  pre_tool_audit.md  session_anchor.md
integrations/: langgraph.md  opendevin.md
kaizen_core/: backlog.py  judge.py  llm.py  main.py  models.py
marketplace/: README.md  index.json
patterns/: agentic_ide.md  enterprise_react_component.md  modern_python_structure.md  reasoning_loop.py  skill-activation.md
proof/: evolution_log.jsonl
scripts/: agent_comm.py  audit_headers.py  audit_skills.py  benchmark_repo.py  continuous_improve.py  generate_index.py  hive_client.py  log_evolution.py  reality_check.py  remediate_actionability.py  remediate_connectivity.py
skills/: 000-INDEX.md
templates/: NEW_SKILL.md
tests/: test_structure.py  test_tools.py
tools/: computer_use.py  ha.py  kaizen_doctor.py  kaizen_market.py
(+101 files in other folders)
