[project]
name = "kaizen"
version = "1.0.0"
description = "A Framework for Recursive Self-Improvement in Autonomous Agents"
authors = [
    {name = "Kaizen Intelligence", email = "kaizen@example.com"},
]
dependencies = [
    "ollama>=0.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# The Gold Standard for Python Linting
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = ["E501"] # Ignore line length violations (let formatter handle it)

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = ["test_*.py"]
